@@ -20,6 +20,9 @@
 	page comments to set the page header for the first page
 	of each chapter.</li>
 
+	<li>Added "timing" and "remotebytes" debug data
+	generation.</li>
+
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
 	<li>On Windows, HTMLDOC now logs CGI mode errors to a file
